Remove agent and some reflection usage